# iz

./: README.md  pyproject.toml
iz/: __init__.py  dmetalog.py  metalog.py  pad.R  pmetalog.py  qmetalog.py  rmetalog.py  runs.py  summary.py  support.py  update.py  usage_tests.py
iz/data/: beta.csv  norm.csv  triangular.csv  zero_pois.csv
tests/: test.py
