[tool.poetry]
name = "iz"
version = "0.1.0"
description = ""
authors = ["alexhallam <alexhallam6.28@gmail.com>"]
readme = "README.md"
packages = [{include = "iz"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1+cpu"
numpy = "^1.25.2"
pandas = "^2.0.3"
polars = "^0.19.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "primary"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
